@@ -2,6 +2,8 @@ Development Portal (2014-09-25 shi)
 ==============================
 Added logo link back to generator
 Updated descriptions and instructions for generator
+Added SAVi views and instructions
+Added toggle link for screenshots
 
 
 Development Portal (2014-09-22 shi)
